// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correct messages when cart has items 1`] = `
<CartTableHeader
  cart={
    Object {
      "channel": "web",
      "created_at": "2019-01-07T14:28:02Z",
      "discount_summaries": Array [
        Object {
          "id": "2918ed5e-2515-4603-b22f-aa1487304f05",
          "name": "£1.50 off all orders",
          "promotion_id": 21,
          "total": 1.5,
        },
      ],
      "email": "",
      "free_shipping": false,
      "id": 151,
      "line_items": Array [
        Object {
          "cart_id": 151,
          "container_id": 151,
          "gift": false,
          "id": "311",
          "item": Object {
            "available_to_browse": true,
            "available_to_order": true,
            "created_at": "2018-09-24T15:43:00Z",
            "current_price": 6.77,
            "deleted_at": null,
            "description": "Product 40 - variant 1 Grown at an altitude of 4, 500 feet, the tea bush 'wakes' after the winter in April and produces delicate white buds, which often have a white down on them.They are picked by hand and sun- dried so that fermentation cannot take place. Very little white tea is produced, as this process requires particular care, increasing its rarity and making it highly sought after by tea buyers all over the world. It has a delicate flavour, so is best drunk without milk.",
            "ewis_eligible": false,
            "has_assets": true,
            "id": "321",
            "meta_attributes": Object {},
            "ordered_total": 10,
            "picture_url": "https://shift-platform-dev.s3-eu-west-1.amazonaws.com/uploads/asset_file/asset_file/131/1537803713.5364385-SCS-04-CJ_coffee_jug_600ml.jpg",
            "price": 6.77,
            "price_includes_taxes": true,
            "product": Object {
              "attribute_merchandising": Object {},
              "available_to_browse": true,
              "average_rating": 0,
              "canonical_path": "/jugs/seed_product_40",
              "category_ids_cache": Array [
                57,
              ],
              "content_type": "html",
              "created_at": "2018-09-24T15:43:00Z",
              "description": "Grown at an altitude of 4,500 feet, the tea bush 'wakes' after the winter in April and produces delicate white buds, which often have a white down on them. They are picked by hand and sun-dried so that fermentation cannot take place. Very little white tea is produced, as this process requires particular care, increasing its rarity and making it highly sought after by tea buyers all over the world. It has a delicate flavour, so is best drunk without milk.",
              "ewis_status": "not_ewis_eligible",
              "has_assets": true,
              "id": "164",
              "max_current_price": 90.31,
              "max_price": 90.31,
              "merchandised": true,
              "merged_attribute_merchandising": Object {},
              "meta_attributes": Object {},
              "min_current_price": 6.77,
              "min_price": 6.77,
              "picture_url": "https://shift-platform-dev.s3-eu-west-1.amazonaws.com/uploads/asset_file/asset_file/131/1537803713.5364385-SCS-04-CJ_coffee_jug_600ml.jpg",
              "published": true,
              "rating": 0,
              "reference": "seed_product_40",
              "sellable": true,
              "seo_meta_description": "Product 40 - Qui sed maiores occaecati.",
              "seo_meta_keywords": "minus, ut, ut, adipisci, consequatur",
              "seo_meta_title": "SCS-04-CJ coffee jug 600ml",
              "slug": "jugs/seed_product_40",
              "title": "SCS-04-CJ coffee jug 600ml",
              "updated_at": "2018-11-21T10:16:59Z",
              "web_product_description": "Product 40 - Totam aut quo facere.",
              "web_product_name": "SCS-04-CJ coffee jug 600ml",
            },
            "product_id": 164,
            "reference": "est_36_1",
            "sku": "3008557600817",
            "stock_allocated_level": 15,
            "stock_available_level": 85,
            "stock_level": 100,
            "tax_code": "vat",
            "title": "Variant 1",
            "updated_at": "2018-11-20T13:18:46Z",
          },
          "item_id": 321,
          "item_type": "Variant",
          "line_item_discounts": Array [
            Object {
              "id": "2a720d8d-ae39-462e-b2e2-4c49ca5c8846",
              "line_item_number": 1,
              "promotion_id": 21,
              "total": 1.5,
            },
          ],
          "sku": "3008557600817",
          "stock_available_level": 85,
          "sub_total": 6.77,
          "tax": 0.88,
          "tax_rate": "0.2",
          "title": "Variant 1",
          "total": 5.27,
          "total_discount": 1.5,
          "unit_price": 6.77,
          "unit_quantity": 1,
        },
      ],
      "line_items_count": 2,
      "meta_attributes": Object {},
      "shipping_method": Object {
        "total": 3.45,
      },
      "shipping_total": 3.45,
      "shipping_total_discount": 0,
      "sub_total": 6.77,
      "tax": 0.88,
      "test": false,
      "total": 5.27,
      "total_discount": 1.5,
      "updated_at": "2019-01-07T14:32:05Z",
    }
  }
  className="dummy-classname"
  shippingMethod={
    Object {
      "id": 1,
      "meta_attributes": Object {
        "working_days": Object {
          "data_type": "text",
          "value": "1",
        },
      },
      "name": "Super Saver",
      "paid_price_inc_tax": 3.45,
      "reference": "super_saver",
      "retail_price_inc_tax": 3.45,
      "sku": "super_saver",
      "tax_amount": 2,
      "tax_percentage": 20,
    }
  }
>
  <section
    className="dummy-classname c-cart-table__header"
  >
    <div
      className="c-cart-table__header-grid"
    >
      <div
        className="c-cart-table__header-grid-item c-cart-table__header-grid-item--a"
      >
        <h1
          className="c-cart-table__title"
        >
          Your Shopping Basket 
          <a
            className="c-cart-table__amount"
          >
            (
            2
            )
          </a>
        </h1>
        <div
          className="c-cart-table__text"
        >
          <p
            className="c-cart-table__description"
          >
            You have 
            <a>
              2
            </a>
             
            <Plural
              className={null}
              count={2}
              showCount={false}
              singular="item"
              style={Object {}}
              zero={null}
            >
              <span
                className={null}
                style={Object {}}
              >
                items
              </span>
            </Plural>
             in your shopping basket
          </p>
          <p
            className="c-cart-table__description"
          >
            <Plural
              className={null}
              count={2}
              plural="These"
              showCount={false}
              singular="This"
              style={Object {}}
              zero={null}
            >
              <span
                className={null}
                style={Object {}}
              >
                These
              </span>
            </Plural>
             
            <Plural
              className={null}
              count={2}
              showCount={false}
              singular="item"
              style={Object {}}
              zero={null}
            >
              <span
                className={null}
                style={Object {}}
              >
                items
              </span>
            </Plural>
             will be saved for 48 hours depending on availability
          </p>
        </div>
      </div>
      <div
        className="c-cart-table__header-grid-item c-cart-table__header-grid-item--b"
      >
        <h1
          className="c-cart-table__title"
        >
          Estimated Delivery
        </h1>
        <p>
          We will deliver your item: 
          <a>
            Wednesday 5th December
          </a>
        </p>
      </div>
    </div>
    <div
      className="c-cart-table__header-total"
    >
      <h4
        className="c-cart-table__total"
      >
        £
        5.27
      </h4>
    </div>
  </section>
</CartTableHeader>
`;

exports[`renders correct messages when cart is empty 1`] = `
<CartTableHeader
  cart={
    Object {
      "discount_summaries": Array [],
      "line_items": Array [],
      "line_items_count": 0,
      "sub_total": 0,
      "total": 0,
    }
  }
  shippingMethod={
    Object {
      "id": 1,
      "meta_attributes": Object {
        "working_days": Object {
          "data_type": "text",
          "value": "1",
        },
      },
      "name": "Super Saver",
      "paid_price_inc_tax": 3.45,
      "reference": "super_saver",
      "retail_price_inc_tax": 3.45,
      "sku": "super_saver",
      "tax_amount": 2,
      "tax_percentage": 20,
    }
  }
>
  <section
    className="c-cart-table__header"
  >
    <div
      className="c-cart-table__header-grid"
    >
      <div
        className="c-cart-table__header-grid-item c-cart-table__header-grid-item--a"
      >
        <h1
          className="c-cart-table__title"
        >
          Your Shopping Basket 
          <a
            className="c-cart-table__amount"
          >
            (
            0
            )
          </a>
        </h1>
        <div
          className="c-cart-table__text"
        >
          <p
            className="c-cart-table__description"
          >
            You have 
            <a>
              0
            </a>
             
            <Plural
              className={null}
              count={0}
              showCount={false}
              singular="item"
              style={Object {}}
              zero={null}
            >
              <span
                className={null}
                style={Object {}}
              >
                items
              </span>
            </Plural>
             in your shopping basket
          </p>
          <p
            className="c-cart-table__description"
          >
            <Plural
              className={null}
              count={0}
              plural="These"
              showCount={false}
              singular="This"
              style={Object {}}
              zero={null}
            >
              <span
                className={null}
                style={Object {}}
              >
                These
              </span>
            </Plural>
             
            <Plural
              className={null}
              count={0}
              showCount={false}
              singular="item"
              style={Object {}}
              zero={null}
            >
              <span
                className={null}
                style={Object {}}
              >
                items
              </span>
            </Plural>
             will be saved for 48 hours depending on availability
          </p>
        </div>
      </div>
      <div
        className="c-cart-table__header-grid-item c-cart-table__header-grid-item--b"
      >
        <h1
          className="c-cart-table__title"
        >
          Estimated Delivery
        </h1>
        <p>
          We will deliver your item: 
          <a>
            Wednesday 5th December
          </a>
        </p>
      </div>
    </div>
    <div
      className="c-cart-table__header-total"
    >
      <h4
        className="c-cart-table__total"
      >
        £
        0.00
      </h4>
    </div>
  </section>
</CartTableHeader>
`;
